--- a/doancsdl/DeTai_QuanLySinhVien/A.GiaoDien/DanhSachHocKy.resx
+++ b/doancsdl/DeTai_QuanLySinhVien/A.GiaoDien/DanhSachHocKy.resx
@@ -124,115 +124,115 @@
   <data name="btThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAZDSURBVEhLpVULUFNXGr6z3dXakaWCukBXHpaurGi19dFC
-        qYuu1nGLq+Ii0hnpdCvUZ2fWseM4pVyfBCIYQlIeIhqKvDGgCAISCG+SyBACCjEEgiabMIJd1xkxKN+/
-        98bstOzqdDr9Zr75//Of7//umXvOvYf5KSxMnOMamOoVti571deRhWFpOwvCJOtz3o8PTPMJD5B4uTtl
-        Px+LRV7LI/I2FWarMh6bxobpyeQTejb1jKw2K+xP7aS90w1po9S+q2j7lWVp3h84234a/mJmZkjGcpFY
-        nfLM+sBK+iE9Hj1+RI/tj8k+aSezxYwJ+wQNjQzh+0ffk+2Bjc7VZWD9uSDZYum82U6bF8NH5Pr65uy1
-        LeXNcqh71dD2a3HLcAt6ox53jHcwODTooMFocNT4OV7Da6vaqhCZu00XcHaup9NuOviVb8wKbq3tqqEG
-        tQJ6s56GbcPU3d8N8+g9MhgMDra3t4OP3X3dsIxZyDQ6TG3dreg19ZJCq6CtOZv6+H1z2v6AZWffFJ+r
-        zaKWW81U3V4NnamHBsz91KnrhNFipJGRETKZTKTRaMDnKm0nhmxGTjNADRoFbho01Hq7hc4UChEkXlrk
-        tH0OH4HrOwfP7nmWViZGwY18XFaW4VpbJerUtWjsakDTTSV6enqmka8puxpxQ12HqvZrkDddRkF9PqRy
-        CY6ID8Nf6PaR055hViQHFLNSFgXNl+iKppzybuSi8ZaC2vQtVNVRia7BmzQ2Nkb379+n27dvg89rOq5D
-        Y1RxmlYqURahVnudrmoqSCJPQ0LJKVojelfpMJ9zhHHdIvp4Ij4tDhcazlNB6yXKrErHte4rVNt7nYqb
-        CtHS30QPHz50cHBwEHwsby5DY3891XGai3U5kKtLqZDrFRYn4lhRPG3MCp3yPunqx/wuYUbYFwmf44jo
-        MNg8FkmlCUitSEZ6dRqyueMnU5xHQUMe/97B7YGDfM7X+LnzdZmcVsL1pEBYKsCxSyyOpn6Fg4K98Ba4
-        7mZ8El7/ek/2bvpHygEUtxfQE/sTume+BzsX7Xbu3JvNXG6nyclJB/nxfyNff665B76PZ/pVCQ7lHaS9
-        2TEUKFwgYfwF8yWfn47G/uQYJF9OhM1m+0VMkSdxXrHgPd8WLixh/BPnS6OzIin2zC6cb0onADQ6OsoF
-        /F/+4/HLNIKy44iVRRPvuSTRt4zxOv1afFTmFvrszA5kKlPp6dOnZLFYwMf/zX88fpnmZCmLz2Q76JOs
-        beSb4JbOuJ1gwlcJFlHYyTX4OCOY/poZTOFJwYjK/5A+LfkTxWSvw9GaKJqYmHDw7t274OPRvCjsLl9L
-        0ZxmpygE23KCKSw9iDYdfx9hGR9SUOIScj/+q33MbJaZ6xk/c9Ij/hX4sTMQyM7CaqEL1krdsPmCJz4p
-        XIhD5aEwGo3TeEgeiqgCP4TleCBU4oaVSS5YzPX6sr+BxzevwDPuVbifZgIc38LvT71a+SY3uVg6i1bL
-        fkvrM+YiotaHYluX0Fe1QTjTG0Hj4+MODgwMgI+sIgKHu96jmJZA+tt33vhzqTutuuhCf+QfIphJ3qdm
-        qx3mPOYl/jpk5XFPrLzgQrwwMt8XBzrfIbZvHbEd2/Dd8H7iTghZrVbS6XT8aaFk1X6IBrdQfG8o7bu6
-        DBE1PrS2xI1WCGZjRboHeQhmbHfaP8ei1Dm5f8nwQ3juAvANrHI9Tmgikabbi1wdi66urmmU9bAQ9+zB
-        MXUE2MZ12FOxFFtlb2DjtwuwRDy/xmn7A9yTGJeQi2/17m9bTXH1ayAdjqAS2wHK17NoG8sk7r3zvwnq
-        6Ojg94Aq+k+g5gFLRdZ9xKq246g2hGKbl9OG/LdMPsLXPJy207EgaZbX1rJ3+9iOXcizxFDNg3iqHDoG
-        3b8LSWtUkG5ISfWqEmiN9VRvFKPjkYSqx+MoufvvEBt20o6KD0x+yS5/cNq9GPxlseHS8mKxKg4VRhaK
-        uyKoLLnQWsvRZ63mWAXtP+XoNMtQP5IC+SCLb29+g83F79X4COe9eOUvQoB43kdfXAtXlndKpyyTnTQ+
-        1Uf/gp4Mo60Ym9JRj6USMs1JfFkbqXpb8sb0Df054C4j36US7907ijZIDlZFl3x5/dPSnaWb0ldm+O9b
-        JHJf5JS9BAzzH7/9HVcB37PIAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAY4SURBVEhLpVULTFNnGL2Zm04jQ0Ed4OShOJnodL4mDJ06
+        H3HiVByiS2TZJsx3MuNijIyrTqE8RltaQUQFkWd5CcJsBQTl2YJQXgLS2ipFagSdMxGLcr7dW7s4Ns2y
+        7CQn3/d///nO/fM/cpl/w2TBWGt3kYP3svj5h/zSvKM3p3pLlp9ZGOwe7eTjJnGwtcj+O6YLHWb7nl+d
+        Fq+MfaLv1dHTgaf0fPA53e25C9MzEzV01ENaKjVtTd+YNyva8RNL27/DVcyM8IqdLRSpIp/3POihdm07
+        Hj95TE9MT8g0YKIuQxf6Tf2k1Wvx8PFDMj4wUpwiBstPeSROl44fbbF5NZyE1mPWxi8tz7maDWWTEg03
+        GtByswXtmnZ0aDrQqe0086bmprnGz/EaXltQUQC/cxua3KLG2VvshoJf+ao4zwrFdTmVKIvRYeggnVFH
+        9TfqYbjXRZ2dnWZWVlaCj/XN9eju7Sb9PR1V1JejWd9MJeoSWn9mdQt/bhbbl5gVNUV8ShFH5a3XqLCy
+        EE36Rmo3tFF1YzW03Vq6ffs26fV6UqlU4POahmrcMmo5TTuVqIpR11lLFTfKKTw1DB7imekW2xdwCrX+
+        aM8v25+LM0VIuZyMrNJMXKzIh0Ipx5W6EpTVlkKtVg8hXyutu4LLSgUKKi8iuywLKUXJkGRH44BoP1zD
+        bVZa7BlmbqRbBithkXotmfJqcynpciJKW0uosqOcCqrycV1TR729vXT//n1qbW0Fn1+q+hW1WiWnqaCM
+        0jQo1Jcov/YCRWeLESI7RouFc8rM5mMPMNbrhGv6g8VBOHvlNKVWJFNswQkUNOSRovkSpZelorztKj16
+        9MhMbv/Bx5yrmShtK6bLnOas4jRyVJmUxvWGpYficHowrYz7dNDxZ2sX5t2Q4d7fH/8OB6L2g01iIZAd
+        hzA3AicKxTjFXb+E4niklCSB23/odDoz+Zyv8XPxilhOG831RCJMFgL2PIuDwh+xJ2QHHEOttzFOIWMO
+        bY/fRj9E7kZGVSo9NT2lO113YOKiycTd+64uLjfRwMCAmfz4z8jXX2jugO/jeSIvGvvO76Ed8QHkHj5J
+        wriGTpB8d8wfuyICEJEVip6env/FyGwB5xUI3vPD8MkyxlUwQeof50eB4Vtx+moMASCj0cgF/CP/6/h1
+        mpDMwwhM9Cfec4bAOYtxOD4qeMvJdfRN+CacLBPRs2fPyGAwgI9/z/86fp3mqIzFN4mb6Ku4DeQcYhPD
+        2BxlfOaHTiPvo4uxJtaTvjjpST4CT2xJWURfyz6lgFPLcFC+hfr7+83kHhn4eDBpC7blLiV/TrM5ygsb
+        zniSd4wHrT68EN6xi8hDMINsj7yxkxnNMuPsg0cM2AUPgws7HO7sSCwIs8JSiQ3WnrHHV6mTsS9nCTQa
+        zRDuy17CLcIF3qftsCTaBvMEVpjO9Tqzb8Hup2GwD3obtscZN/NbeO/Y2xencJPTpSNpQeI7tDxmHHwV
+        ThRYMYN+lHsgotmX+vr6zGxrawMf2WJf7L/+MQWUu9OX5xzxWaYtzU+wog/4j4SOIMdjo1Vmcx7jBW96
+        zTtsj3lnrYgX+iU7Y3fNR8S2LCO2agOSdLv4gyTullBjYyP4PKJmF4SadRTcvIR25s2Cr9yJlspsaG7I
+        aMyNsSO70OEbLfYvME009tznMS7wSZwEvoEtXY4jKj+IG3cgsZFFXV3dECaoWYjU28EqfcFeWYbtuTOx
+        PmEiVkknYYZ4gtxi+xK2YYyVV8LU5l2VCyioaDGkOl+SGXdTcjuLyt6TpNVqidt7qqqqAp/n3jgC+QOW
+        0nt2EluzEQfVXhR4bTatSJmqdwofZWexHYpJYSMd1mfNaWGrtuJ8dwDJHwRTvpZF0+9ppNaWUNOtMiqq
+        yYBaW0xFGhGqH0vo174giqj/FuLOzbTpwid6l0ir9y12rwb/s1iRPDtDVBOEXA2L4ttRqDEkouFuDprv
+        FnIsQEN3Nqq7ElCkj0R2Jwtp7U9Ym/Gx3Cl8/KtX/iq4icev/L7Apyy3WjrYPVBDfYMt9Bs66KaxHL2D
+        TaQ25CNBdRR7FX7KDyUThx7ofwH3M3KeKXHctil9hWRPob9s76WvMzdnro6ZF+u6c5rQdppF9howzB8q
+        mxtfJZcrwgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btSua.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANlSURBVEhLzZVtTFNXGMdvlDUMahsL9I1S6QW6CBsZ2XyP
-        aSTO8EUlkQEmOGQyAsQw0RnfEOpbjDHGDxrDmIZIgiiErZnNNGJsZLNIUmCVjlZGYaIiY61I6pKZePr3
-        ucn5bLx1Jv6SX+7Nvf/73HOek3Ov8F4zOzSUHmxv3zRxuXv55KT7Q375/2Fo156TA1u2wvtlKXoStfA1
-        JqG2Kq+A33477jc31wUb7XjW3oF7Nhu7qzGz8arP4DydNskjsTMXDFq95RUInr8QfVpcBr/ZynwqMwt9
-        XwBvaw7G2ro/5tHYuFtc7J/tdmB2936ExGyE9SKmtAYA++AoVcJ/7NQaHpXPiP3wyamz5zB2tpkF8law
-        sMGCEWUaG71uY8/GC3FGEPC3z6fkcXnMeDyrvTXbMXauOXqf+h4wZrCwRsRwYS6bmalgrdb56NtYcpDH
-        5TFYXXvKZbO9+KuzC48qq/HYbEVIJ+JJpola04Cb+0z4UVAO8Lh8ego33X5QvR2erGz8YkhjLo2e9Sfq
-        WcRbjkFHfvQ8tWa6r0/H4/J46HAU+Rsaca2pKXpLnYzfkoysRaGKutZbGXACbdkChmrqK3hcHpFIRDtY
-        svnfuZ+vwluwnvWlGNGZqGLuZJrFR3rmbFiEyxnWqzwun4GtFa5QxxXMNR3FP9ZcPNSZ8UeyEV2JarjV
-        WgTiNDhWVPQFj8tjtKVl27j9KIKtF1l4uQ0Bo8hCqRn43ZBOa2BgHfM+wDZBuJKl0S3jj8jDvWFDcPZS
-        B56WlCFkykSYiktO6i3oT1CjJ2/pDzwqn0dO59rRunoEvv6GBbI+YWGjCH9qBntCG8un0cMZl/CAR2PD
-        U1nV9th+BCO0ofxSa+gFw3Qc1Zrgmh+PSG9vLo/Gxq9r1o1PVdViJjOH2iJi2mjBn9o0eFTJ2Bun+I7H
-        YuemKD6fWJVPo7YwLy1qIMWEAdoDxxXxu3hkAWkhPyWlRZb8nMwmVeTr+Umt9Xv0ZvSmpEaHNTq4Fyx8
-        WTovTiouFdhI1pB7SOnb00Q2kDvJMjKTfD3TXfkT1xKU6IlX/ndIobiTJAhSW+pJqeAh0k4eIL8lvyKl
-        GaSSb/bbvHcjr39HZVInnUoF9pLSCKUR15Hl5DpyMbmQjCdloydXkSvJJWQOmU5qyJgKviME4RXIkY1K
-        e/3q0AAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANoSURBVEhLzZV9TBNnHMcvig2D2sYCfaNUekCXwUYk6uY0
+        ppE45x9ETGTAEjYgEgLEoPgSdTKom8YsxuwPX4YvCRkJohCUaKNmmDVqpJq01iJwCBQmKoK2IqlLZrKn
+        3/0uef42uzqTfZJP7nL3vd89z+/Jcyf8r5n1+9OD7e2bJs51r5ic7PuAX/5v8O/Yfdj3TQUCX5WiN1GP
+        gaYk1FXnree3342HLS31wSYnXrV3IOBwMI/Oysarl8L1c9okj8TOXDBoD5RXYuz0mejL4jIMWe3sgcbK
+        QifXI9Cag7G27o95NDbuFBdLs909mN31HUJiNsJGEVN6E4C96ClVQzp4ZA2PKmfI+cPhqWMnMHqshUl5
+        n7OwyYZBdRp7eM3BXo1vxFFBwMzAgJrHlfHc610dqN2C0eO/RIep75I5g4V1IvoLc9nMTAVrtc+Hp7Dk
+        ex5Xxr2auiNuh+PNH51deFJVg6dWO0IGEc8yLdSaRlzfa8EFQe3jceX0btx041HNFnizsnHFlMbcOiO7
+        k2hkkUA5fBfzo2eoNdMej4HHlfG4p6dIamzClebm6O/aZNxKMrOTKk3UXWBnwE9oyxbgr22o5HFlRCIR
+        /b2Sr/+cu3QZ978sYJ4UMzoTNex2Ms3iQyNzNS7GuQz7ZR5Xjq+i0h3qOI+55gN4Yc/FY4MVg8lmdCVq
+        0afVYzhOh4NFRV/wuDJGTp3aPO48gLHWX1l4hQOSWWSh1Az4Tem0BibWMW8BNgvC+Syd4TP+iDL6NmwI
+        zp7twMuSMoQsmQhTcdlJow13E7Tozfv0NI8q54nLtXakvgFSZRWTsj5hYbOIodQM9ow21oDOCFdcwiMe
+        jQ1vVXXbU+ePGKQNNSS3hl7QT8cRvQXu+fGI3LyZy6OxcWvNuvGp6jo8z8yhtoiYNtswqk+DV5OMPXGq
+        nTwWO9dF8fXEqnwatY3dp0UdTrHAR3vgkCp+B48sJG3kElJeZNllZDapId/ORa1e8hqtuJGSGn2gM6Bv
+        4aK/S+fFycXlAoVkLbmblL89zWQjuZ0sIzPJtzPdlT9xNUGN3nj1X/tVqttJgiC3pYGUC+4nneQ+civ5
+        LSnPIJX8d7/N/t/y7m6rSuqkU7nAHlIeoTzierKcXEd+RC4i40nFGMlV5EpyOZlDppM6MqaC7wlB+AfZ
+        Eo0chgfPTAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btXoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAARcSURBVEhLzZZ9TFdVGMfPveece38vFy4/5B2WvJgETVQE
-        jCaFpnPD0R+YzdYfrUUj/EOoyYYksFKIl/2MQEHiR4mUhATytsSIMJ1BvL8qJQI6moHYXGD9VOLp/OBs
-        roDx8lef7e5uz/N9vjvnOc/OvchCrpfXy00Jh1vGiwuGa8N2Vx9X7fxnEyskE6G1BU4OSQ17I65VhgSN
-        ZwtCNcp0dHQo2fnSqeH8PJisKIX26Mh7n3t6Jn2CbK153bJg5vqTWu07NSHbmjoORENlUCAYBaEBNR2O
-        75n66SpA82WA8yUAZ3LhflIsXPDf0GJSNC/w+kVJRkjMouIbdQEB3TdjY6A39iCUBweX5hgMwekIuaB+
-        47E75ksXAb6rgpnTJ2A6IwEgMQogKhw6N6p/ZRLxAPeaRzYhQV/a2V0cCN8Dt6MioWrr1s5sVb+Tp+fI
-        c3ffWBEa+vG1g689eGxMAkiOhkeRYfAw3A/+3uYCwx4K5FKcaURIy0uQCSGrLCLGf+/qNDW6PRRavdc/
-        zlJ0iWkGg8ol8/mI0g1fr/c62xfgOz0TsQXMz7vBhI8Kv3vqYdBBggIJm/IRohmy7HVOEi91qQoMrfOA
-        GleXMSPGe7nN0pwk5MXqNbqrQ54qjK/Vw4ijBCN2EnRbYSikQm0Zwbf7JAJ9Wg2UaOSeVIICeenyYQen
-        MUliTKM1+XVQJXBdwdCnEaGTitCNBWgVBThNhQY2OR68ZHWkIeR2ighVbTIzJwK0Cwg6EIJiUew9pENO
-        XLZ6kvXIoVAUf2hhK+7g5p3sXU3ER6mUvsllqyOFkJCvMP6lixl2MuMf2fsCZi2SBLihw1CrI5MJhDzH
-        5SuDTUVYFRbvdVlWzJ42toMiKnyTzgagTIMHR2wpjDnLcEaRWmMQsuFlyyNVwmE1onjXYt7Gnh5mXsJ2
-        cpSNpyWfLEm+ZSr+eeppHYw9o4BRSz9kYcGSW5IjlG6uEMXRWXPWkl52sHUS/jNFxtu5ZJYjSPIpX6MZ
-        giAVrjhr7scjEsxTi8NGU8emo9ti3s5W3c963arFwNqSwCX/Ig5R/8tu0sTMJmsotqL1LLT4LiwXVg4R
-        iiyr7mJz3qcVYcCKwGcaUh/HrgUum0cyxhHNtnrzLU8FUkTxVR6ezwcY76qn+EE/FaCHmY/YUKizoncT
-        KN3EJYuSLePMO+y+qjHIHWyhCx94rqIcv+71FAzYaOGmgV0D9jKkSAu35r8wU+W8IrffcNFDmiju5+En
-        HEPIufJZn97fIsLglp8HjHvoodlWNhu1WlcuWZKjGO/otNdCiV4q3IcQ5uE5jLK8rm5XyOhU0nswsX83
-        mHd4Q7+9+jBPld25ZFmYNDj/ik6aLJWQNw/NwbYoFQduKZ8++ylMp8cBxL4Cjb52EyfY1rlkWTAf9yJK
-        Gqso9eOhJyRK0p7mQ6+b//giB4be3gcZiiaep1bEOdYeWGhc32Vfq3xfb1Nr7FvDZZv9vn2f/R3w1P8d
-        hP4Bw5quR9pY2EQAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAARcSURBVEhLzZZ9TFdVGMfPPeeee38vFy4/5B2WvKgETVQQ
+        jCaFpnPD0R+YzdYfrUUj/EOoyYYksFKIl/2MQEHkR4mUhATytsSIMJ1BvL8qJQI6moHYXGL9VOLp/OBs
+        roDx8lef7e5uz/N9vjvnOc/OvchCrpfXK00Jh1rGiwuGa8N2VR9T7fxnEsskE6HVBU4OSQ17Iq5VhgSN
+        ZwtCNcp0dHQo2fHyyeH8PHhQUQrt0ZH3Pvf0TPoU2VrzuiXBzPUntNp3a0K2NnXsj4bKoEAwCkIDajoU
+        3zP501WA5ssA50sAzuTC/aRYuOC/vsWkaF7k9QuSjBDOovjNus2bu2/GxkBv7AEoDw4uzTEYgtMRckH9
+        xqN3zJcuAnxXBdOnj8NURgJAYhRAVDh0blD/yhTxfu41h2xRDPrSzu7iQPhuuB0VCVVbtnRmq/odPD1L
+        nrv7horQ0E+uHXj94RNjEkByNDyODINH4X7w91YXGPZQIJeSTCNCWl6CTAhZZYk4/ntXp8nRbaHQum7t
+        kyxFl5hmMKhcMpePKV3/9Tqvs30BvlPTEQFgfsENJnxU+N1TD4MOEhRIxJSPEM2QZa9zEr7UpSowtMYD
+        alxdxoyE7OE2i3NCFF+qXqW7OuSpwvhqPYw4SjBiJ0G3FYFCKtSWieR2nyRCn1YDJRq5J1VEgbx06bCD
+        05gkHNNoLf46qIpwXSHQp8HQSTF0EwFasQCnqdDAJseDl6yMNITcTopCVZvMzEUB2gUEHQhBMca9B3XI
+        ictWTrIeORRi/EMLW3EHN+9k72oRP06l9C0uWxkpohjyFSG/dDHDTmb8I3tfIKxFkgA3dARqdeKDBFF8
+        nsuXB5uKsCqC73VZVsyeNraDIip8k84GoExDBkdsKYw5y3BGkVpjELLhZUsjVSJhNRjftZi3saeHmZew
+        nRxh42nJJ0uSb5lKfp5cq4OxZxUwaulHLCxYcotymNJNFRiPzpizlvSyg62TyJ8pMtnGJTMcRpJP+SrN
+        EASpcMVZcz8eicE8tTBsNHVsOrot5u1s1f2s161aAqwtCVzyL+IQ9b/sJk1Mb7SGYitaz0IL78JyYeWI
+        QpFl1V1szvu0GAasRPhMI9bHsWuBy+aQTEhEs63efMtTgRSMX+PhuXxIyM56Sh72UwF6mPmIDYU6K3o3
+        gdKNXLIg2TLJvMPuqxqD3MEWOv+B5yrKsetez8CAjRZuGtg1YC9DijR/a/4LM1XOK3L7DRc9pGG8j4ef
+        chQh58rnfHp/iwiDW34eMO6hh2Zb2WzUal25ZFGOELK9014LJXqpcC9ChIdnMcrymrqdIaOTSe/DxL5d
+        YN7uDf326qM8VXbnkiVh0pD8KzrpQamEvHloFrZFqTgwoHzq7CmYSo8DiH0VGn3tJo6zrXPJkmA+7kVU
+        bKyi1I+HnpIoSbubD75h/uOLHBh6Zy9kKJp4nloW51h7YL5xfY99rfJ9vU2tsW8Pl23y+/YD9nfAU/93
+        EPoHrd6uRIJABt4AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btInBaoCao.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAVaSURBVEhLrZUJTFRXFIanKiKoaESKVrpjY6Olq5WiII1i
-        XbBqATcUFWnTmsaojaKiIm4tCgIKKiqiUKEwgmwFUWRGlhGYGfZl6owzyjowbAUGHJj3/p7JI6kGjI31
-        T17ey33vfufcc+/5H+8FGnH0Stb+WMmA8P1Zs78aHHs18osUuuWomLrCR0B7H+D2w8FUGh7Hvf0fcvE6
-        MDNbxeSICKxqZdGvZ6AHsGKLz216PZH76iVkZWtrEhSTF15QB1Q0sOjVMejtB5q7aAW9wLL1ew0BJnBf
-        v4S+9fRxyKesW7UMdANAmxaobQdkzXT/G/jGZX+G/dw1W0OCRGGODuv3WFlNnzY49b/JabW3Q3IJiz6C
-        N3QC8hagvBEQ1wNCcTd+DD/Z51W0HuH1QVB2tEFS1KhftWrHTpo6giO8QHYrdtvH5OqgocwrmwApgQUV
-        /TgeexPOGY7weDgHh9pWIli3AWH6zSjX5eOR6glcXXcfoekjOcpzZGlpOdZr++VL4ela1FH2eXIgPFEC
-        V74bXGQfwbtlGQL7NuA8sxUBve7Y1bgYK6tnIe2RAGJpN6yt57gMoobX6WBhZAvV+XxyF+6IlPCI3o7l
-        Uhtsb3SCf/c6nNd74ozOA/s0y+Eht8MC8QeYcdscU/gmyJO1IOissIYwFhxtGPn9KoyK+VODxCQZku7L
-        cLRkL8527sQZvQfCBrbAr/07fK+aj6XFM/GxcCreSBqLSVdHwzSQh7XR25Cd24fp732xdhA3VIcPp8fl
-        F2nQqKHT08FCplZA26rDH9J9+KluPlZVfoI5eW/irTQzTI4ejQmhRjDy48HG/0vw7ykgKgMcHddcIpQx
-        R3xKUVFRY9MyayGtBvJLgJIaoIc6t02lRrOiB8eqffFuxjhYxBlj4gUjmJzgwcLXAkcSY1FE4BwJcFcM
-        LFy0OZ1wZhz1Kd29W+UgLtOigja2hIIUlnOB1K3UZNQHSuoNm5iZMDnJg7HPa/C8egCiYiBXCmQVskjN
-        YZAgABYs3DJ8pxsCVMi0kD8GapRA2QM6olV0/iupH6gXqmksuVAB94idSMlvgoiCZxexSM9jkCgELvLb
-        cDFZD8cFHs8JkFnl8EBJx1NN3kM28ZeKoA+BUhl3f0AryKeMDVkLqRS3RCxuCljEZuqwxy8Lzks24VhE
-        KwV4zgoyKUBtgxYaKkcTbXItNZmiliyCMq9S0DOtLEfK4E4Bi5R7DOLusAiOroZ3QBxOhMZg265T2BGo
-        hp2dazzhhnpVdrZsrrqpF1ra2A7qhRaqfT2V5jHZBFc2BrcL9OBnARduNOBASAr2BlzHodPXcSoiDTdy
-        NFC1AaevlUvenrHYdhD7r+Lj40e6u/tEFhTUPXlC7tlDztlG3dxMq6knoyuWsUjIZvDblVLs9o/Gz77R
-        OBjIR1iCHCkSFrdK9RDJGCgpqfoO4GBwxrUpU6yHNN1oU9MJn612+SVSIJBru8mPDJchUG4pg4hUCnAx
-        E7uO/g7/SAkS7vcjq4JFhnQAYjkDQdkAVGrDv4N+HKSUCkZFTCsO/ayMKNaHS5Z4haSkVnZ2dlF5xAyC
-        +Ay89gmQLmonJ6VzX86gkMBZJQMoVzGQN3BkhYbBsbNpfRPNzE4SazKHHF6jKNB0R8d1J8IuF6uPn5P3
-        zrN3TZ/2jk2od0BmWSPtlayeRU0tAwmVp4ssPjRGiE2evv2LnDbep/mfcpgXy2DDhh/LPLqs6TI2Nzeb
-        /fm8lacShQ/rewiclK/UfL3UvcXe1llhaTn13JgxYxzoO0rw/8nk9UmTnOY6uZ0xHjVqm4W5+cbxpqbO
-        ND6ee/2KFBISMtTcnhGP9w8lgeEqzwMT9gAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAVcSURBVEhLrZULTFNnFMfZFBFUNCJDJ3vj4qJjT4dDQRbF
+        +cCpA3yhnShbNrMYdVFUVESZGwryEFRURGHCoILyGIgirUAr0Fbe0NFKFQoUSoEBBQu9/e80l2QaMC7q
+        P7m5N9+93++c73zf+V+TZ+jVoxdz9yeKB/nvzZ7z5dDYy1FALN8zX6FvLH4AdPQDnj8czKDh8ezbF5C7
+        z4FZeQp9vpDAinYDBvQM9ABWevvdpNeT2K+eQ7Zz55qHJhRGFzUClU0G9OkY9A0Ard20gj5g+Ya9xgAT
+        2a+fQ99s8XMWUNbtWga6QUCjBRo6AGkr3f8Bvnbfn+00b+3W8FBhlIvzhj22tjOmD039f3Jd4+ucVmpA
+        P8GbugBZG1DRDIiUAF/Ugx/PHu/3KdmAaGUo6js1EJc06Vev3rGTpr7KEp4hx5W7nRIKdFBT5lUtgITA
+        vMoB/Jp4DW7ZLuDcd8AhzSqE6TYiSr8ZFToBHigewcNj9xGaPoqlPEU2NjbjfLZfOB+dpUUjZV8oA6JT
+        xfDgesJd+iF825YjpH8jzjBbEdznhV3NS7CqZjYyH/AgkvTAzs7BfQg1sk6G8WPbqM5n0rpxS1gPTvx2
+        rJDYY3uzK4J61uOMfgsidBzsU68AR+aIhaL3MfOmFaZyzVEobUPoKX4tYaxZ2ggK+I0fl/CXGqnXpbh+
+        V4qjpXtxqmsnIvQcRA16I6DjW3yvWIBl92bhI/40vH59HCZfGgOLEBOsi9+GvIJ+zHj383VDuOE6fDgr
+        SVCiRrOaTk+nAVKVHNp2Hf6U7MNPjQuwuupjOBS+gTczLTElfgwmRprCNMAE9kFfgHtHDmE54OKy9jyh
+        zFjiY4qLixuXmdMASQ0gKAVKa4Fe6lyNQoVWeS8Ca/zxTvZ4WCeZYdJZU5gfM4G1vzWOpCaihMD5YuC2
+        CFi0eHMW4SxZ6mO6fbvaWVSuRSVtbCkFKa5gA6naqcmoD+qpN+wTZsH8uAnM/F7BlksHILwHFEiA3GID
+        MvIZpPCAhYu8R+50Y4BKqRayh0BtPVBeR0e0ms5/FfUD9UINjaUVy+EVsxPpghYIKXheiQFZhQxS+cA5
+        rgbn0vRwWch5SoCcaue6ejqeKvIesom/FQS9D5RJ2XsdrUBAGRuz5lMpbggNuMYzIDFHhz0BuXBb+h0C
+        Y9opwFNWkEMBGpq0UFM5WmiTG6jJ5A1kEZR5tZyeaWX5Ega3igxIv8Mg6ZYBYfE18A1OwrHIBGzbdQI7
+        QlRwdPRIJtxwr8rLk85TtfRBSxvbSb3QRrVXUmkekk2wZWNws0gPbi5w9moTDoSnY2/wFRw6eQUnYjJx
+        NV8NhQY4eblC/NbMJXOHsP8pOTl5lJeXX2xRUeOjR+SeveScGurmVlqNkozuntSAlDwGv18sw+6gePzs
+        H4+DIVxEpciQLjbgRpkeQimDekpK2QkcDMu+PHWq3bCmG2NhMfHTNe6/xPJ4ddoe8iPjZQxUUMYgJoMC
+        nMvBrqN/IChWjJS7A8itNCBbMgiRjAGvfBAKlfHfQT8OUnqlXkFMWxb9pEwp1gdLl/qEp6dXdXV1U3lE
+        DEK5DHz28ZAl7CAnpXNfwaCYwLmlg6hQMJA1sWS5mkFgREb/JEvL48SawiJH1mgKNMPFZf2xqAsSVeDp
+        ur75Th5Z09+2j/QNzilvpr2SKg2obWAgpvJ0k8VHJvDB8fYfWOy66S7N/4TFPFtGGzb+WObTZUeXmZWV
+        5ZzP5q86kcq/r+wl8DVBvfqrZV5tTg5uchubaafHjh3rTN9Rgi8m89cmT3ad5+oZYTZ69DZrK6tNEyws
+        3Gh8Avv6JSk8PHy4uT0hE5N/AfVD4RolOe8jAAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="ColumnMaHocKy.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="ColumnTenHocKy.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
 </root>
